[package]
name = "mvcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lmdb-rkv = "0.14.0"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
bytes = "1.2.0"
moka = { version = "0.9.3", features = ["future"] }
futures = "0.3"
byteorder = "1.4.3"
blake3 = "1.3.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
tempdir = "0.3.7"
