[package]
name = "mvclient"
version = "0.3.0-beta.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
description = "mvsqlite client library"
repository = "https://github.com/losfair/mvsqlite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tracing = "0.1"
rand = "0.8.5"
url = "2.3.1"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1.0"
bytes = { version = "1.4.0", features = ["serde"] }
tokio-util = { version = "0.7.3", features = ["io", "codec"] }
futures = "0.3"
serde_json = "1"
reqwest = { version = "0.11.11", default-features = false, features = ["json"] }
byteorder = "1.4.3"
serde_bytes = "0.11"
blake3 = "1.3.1"
zstd = "0.11.2"
