[package]
name = "mvsqlite-fuse"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
rand = "0.9"
mvclient = { path = "../mvclient", version = "0.3.5" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "tracing-log", "json"] }
libc = "0.2"
backtrace = "0.3.66"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
mvfs = { path = "../mvfs", version = "0.3.5" }
fuser = "0.17"
structopt = "0.3.26"
indexmap = "2"
slab = "0.4.7"
regex = "1.6"
