[package]
name = "mvsqlite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
time = "0.3"
rand = "0.8.5"
stackful = "0.1.5"
async-trait = "0.1.56"
mvclient = { path = "../mvclient" }
tracing = "0.1"
ctor = "0.1.22"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "json"] }
libc = "0.2"
backtrace = "0.3.66"

[features]
default = ["loadext", "syscall"]
loadext = []
syscall = []
