[package]
name = "mvsqlite"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
description = "mvsqlite"
repository = "https://github.com/losfair/mvsqlite"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
time = "0.3"
rand = "0.8.5"
stackful = "0.1.5"
async-trait = "0.1.56"
mvclient = { path = "../mvclient" }
tracing = "0.1"
ctor = "0.1.22"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "json"] }
libc = "0.2"
backtrace = "0.3.66"
moka = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.11", features = ["json"] }

[features]
default = ["loadext", "syscall"]
loadext = []
syscall = []
