[package]
name = "mvsqlite"
version = "0.3.0-beta.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
description = "mvsqlite"
repository = "https://github.com/losfair/mvsqlite"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
rand = "0.8.5"
stackful = "0.1.5"
mvclient = { path = "../mvclient" }
tracing = "0.1"
ctor = "0.1.22"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "json"], optional = true }
libc = "0.2"
backtrace = "0.3.66"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.11", default-features = false }
mvfs = { path = "../mvfs" }

[features]
default = ["loadext", "syscall", "rustls-tls", "global-init"]
loadext = []
syscall = []
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
global-init = ["tracing-subscriber"]
