[package]
name = "mvstore-stress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mvclient = { path = "../mvclient" }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tracing = "0.1"
rand = "0.8.5"
url = "2.3.1"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1.0"
bytes = "1.2.1"
tokio-util = { version = "0.7.3", features = ["io", "codec"] }
futures = "0.3"
serde_json = "1"
reqwest = { version = "0.11.11", features = ["json"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "json"] }
structopt = "0.3.26"
blake3 = "1.3.1"
rpds = "0.12.0"
backtrace = "0.3.66"
