[package]
name = "mvstore-stress"
version = "0.3.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mvclient = { path = "../mvclient", version = "0.3.17" }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tracing = "0.1"
rand = "0.9"
url = "2.3.1"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1.0"
bytes = "1.4.0"
tokio-util = { version = "0.7.3", features = ["io", "codec"] }
futures = "0.3"
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "json"] }
structopt = "0.3.26"
blake3 = "1.3.1"
rpds = "1"
backtrace = "0.3.66"
