[package]
name = "mvstore"
version = "0.3.9"
edition = "2021"
license = "Apache-2.0"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
description = "Multi-version page store for mvsqlite"
repository = "https://github.com/losfair/mvsqlite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
assets = [
  ["../target/release/mvstore", "usr/bin/", "755"],
]

[package.metadata.deb.systemd-units]
unit-scripts = "debian/systemd/"
enable = true

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tracing = "0.1"
rand = "0.9"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "json"] }
foundationdb = { version = "0.10.0", features = ["fdb-7_3"] }
structopt = "0.3.26"
hyper = { version = "0.14.20", features = ["full"] }
url = "2.3.1"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1.0"
bytes = { version = "1.4.0", features = ["serde"] }
tokio-util = { version = "0.7.3", features = ["io", "codec"] }
futures = "0.3"
blake3 = "1.3.1"
serde_json = "1"
serde_bytes = "0.11"
zstd = "0.13"
moka = { version = "0.12", features = ["future"] }
bloom = "0.3.2"
constant_time_eq = "0.4"
heapless = { version = "0.8", features = ["serde"] }
lmdb-rkv = "0.14.0"
bumpalo = "3.11.1"
itertools = "0.14"
